<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Verification">

 <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="10dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/code_sent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/input_back"
        android:hint="@string/code"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/round_bg"
        android:gravity="center"
        android:text="@string/next"
        app:backgroundTint="@null"
        android:textSize="18sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:text="@string/did_not"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/verify"-->
<!--        tools:layout_editor_absoluteX="5dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        android:text="@string/tap"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="18sp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView3"-->
<!--        tools:layout_editor_absoluteX="5dp" />-->


</androidx.constraintlayout.widget.ConstraintLayout>